# graphql-mcp

./: .gitignore  AGENTS.md  Pipfile  README.md  debug_browser_request.html  debug_inspector.py  debug_mcp_in_browser.html  demo_auto_injection.py  example_with_inspector.py  pyproject.toml  setup.cfg  test_inspector.py  test_inspector_basic.py  test_inspector_final.py  test_inspector_standalone.html  test_mcp_communication.py  test_mcp_session.py  test_port_8010_session.py  test_simple_mcp.py  test_stateful_inspector.html  test_stateful_mode.py  test_stateful_server.py  test_template_fix.py  working_example.py
docs/: README.md  generate_reference.py  hugo.toml  index.md  package-lock.json  package.json
examples/: Dockerfile  app.py  bearer_token_example.py  cloudbuild.yaml  hello_world.py  library_ariadne.py  library_graphene.py  library_graphql_api.py  library_graphql_core.py  library_strawberry.py  mutation_control_example.py  nested_api.py  nested_query_example.py  pyproject.toml  remote_api.py  remote_server_example.py  task_manager.py  test_examples.py  test_libraries.py
graphql_mcp/: __init__.py  inspector.html  inspector.py  overrides.py  remote.py  server.py
tests/: app.py  app_graphql_api.py  app_strawberry.py  test_allow_mutations.py  test_annotation_to_schema_chain.py  test_app.py  test_apply_mcp.py  test_bearer_token.py  test_complete_fixes.py  test_concurrency.py  test_dict_json_output_schema.py  test_end_to_end_list_input_objects.py  test_enum_input_output_conversion.py  test_enum_instance_mapping.py  test_forward_headers.py  test_graphql_http_server.py  (+22 more)
(+41 files in other folders)
