[project]
name = "graphql-mcp-examples"
version = "0.1.0"
description = "Example servers for graphql-mcp"
requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = [
    "graphql-mcp",
    "graphql-api",
    "starlette",
    "uvicorn",
    "gunicorn",
]

[dependency-groups]
dev = []

[tool.uv]
package = false

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
